--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,5 +20,9 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".activity.OptionActivity"
+			android:screenOrientation="landscape"
+			android:label="@string/app_name"/>
 	</application>
 </manifest>
