--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,11 @@
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
+		android:roundIcon="@drawable/icon_round"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme"
-		android:resizeableActivity="true">
+		android:resizeableActivity="true"
+		android:supportsRtl="false">
 		<activity
 			android:name=".activity.MainActivity"
 			android:screenOrientation="landscape"
